# scrapybara-playground

./: .cursorrules  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/: db.py  main.py  prompt.py  utils.py
